editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__enums__mixed__forwarded_view_error.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(context)]
enum Wrapper {
    #[error(transparent)]
    Transparent(#[view_error] InnerError),
    #[error("converted source")]
    From(#[from] #[view_error] InnerError),
    #[error("explicit source")]
    Source { #[source] #[view_error] inner: InnerError },
    #[error("plain value")]
    #[view_error(status = IM_A_TEAPOT, context)]
    Plain(#[view_error] InnerError),
    #[error("own error: {detail}")]
    #[view_error(status = BAD_REQUEST)]
    Own { detail: String },
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for Wrapper {
    fn label(&self) -> &'static str {
        match self {
            Self::Transparent(_0) => crate::views::error::ViewError::label(_0),
            Self::From(_0) => crate::views::error::ViewError::label(_0),
            Self::Source { inner: _inner } => {
                crate::views::error::ViewError::label(_inner)
            }
            Self::Plain(_0) => crate::views::error::ViewError::label(_0),
            Self::Own { detail: _detail } => "Wrapper",
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self::Transparent(_0) => crate::views::error::ViewError::status(_0),
            Self::From(_0) => crate::views::error::ViewError::status(_0),
            Self::Source { inner: _inner } => {
                crate::views::error::ViewError::status(_inner)
            }
            Self::Plain(_0) => crate::views::error::ViewError::status(_0),
            Self::Own { detail: _detail } => axum::http::StatusCode::BAD_REQUEST,
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        match self {
            Self::Transparent(_0) => crate::views::error::ViewError::sub_label(_0),
            Self::From(_0) => crate::views::error::ViewError::sub_label(_0),
            Self::Source { inner: _inner } => {
                crate::views::error::ViewError::sub_label(_inner)
            }
            Self::Plain(_0) => crate::views::error::ViewError::sub_label(_0),
            Self::Own { detail: _detail } => Some("Own"),
        }
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self::Transparent(_0) => crate::views::error::ViewError::context(_0),
            Self::From(_0) => crate::views::error::ViewError::context(_0),
            Self::Source { inner: _inner } => {
                crate::views::error::ViewError::context(_inner)
            }
            Self::Plain(_0) => crate::views::error::ViewError::context(_0),
            Self::Own { detail: _detail } => {
                std::collections::HashMap::from([
                    (
                        "detail".to_owned(),
                        serde_json::to_value(_detail)
                            .expect("failed to serialize context entry detail"),
                    ),
                ])
            }
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let mut responses = Vec::from([
            crate::views::error::OpenApiResponse {
                label: "Wrapper",
                sub_label: Some("Own"),
                message_template: Some("own error: {detail}"),
                status: axum::http::StatusCode::BAD_REQUEST,
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "detail",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
        ]);
        responses.extend(<InnerError as crate::views::error::ViewError>::responses());
        responses.extend(<InnerError as crate::views::error::ViewError>::responses());
        responses.extend(<InnerError as crate::views::error::ViewError>::responses());
        responses.extend(<InnerError as crate::views::error::ViewError>::responses());
        responses
    }
}
impl utoipa::IntoResponses for Wrapper {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for Wrapper {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
