editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__enums__mixed__forwarded_view_error_with_additional_named_variant_field.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

enum Error {
    Variant { #[view_error] inner: InnerError, context: String },
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for Error {
    fn label(&self) -> &'static str {
        match self {
            Self::Variant { inner: _inner, context: _context } => {
                crate::views::error::ViewError::label(_inner)
            }
        }
    }
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self::Variant { inner: _inner, context: _context } => {
                crate::views::error::ViewError::status(_inner)
            }
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        match self {
            Self::Variant { inner: _inner, context: _context } => {
                crate::views::error::ViewError::sub_label(_inner)
            }
        }
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self::Variant { inner: _inner, context: _context } => {
                crate::views::error::ViewError::context(_inner)
            }
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let mut responses = Vec::from([]);
        responses.extend(<InnerError as crate::views::error::ViewError>::responses());
        responses
    }
}
impl utoipa::IntoResponses for Error {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for Error {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
