editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__enums__mixed__sources_are_excluded_from_context.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(context)]
enum Sources {
    #[error("implicit source")]
    Implicit { source: std::io::Error, context: String },
    #[error("explicit source")]
    Explicit { #[source] my_error: std::io::Error, context: String },
    #[error("inline #[from], inferred as source")]
    From(#[from] std::io::Error),
    #[error(transparent)]
    Transparent(std::io::Error),
    #[error("derive_more conversion without #[source], not a source error")]
    #[from(InnerError)]
    DeriveMore(InnerError),
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for Sources {
    const LABEL: &'static str = "Sources";
    fn status(&self) -> axum::http::StatusCode {
        match self {
            Self::Implicit { source: _source, context: _context } => {
                axum::http::StatusCode::INTERNAL_SERVER_ERROR
            }
            Self::Explicit { my_error: _my_error, context: _context } => {
                axum::http::StatusCode::INTERNAL_SERVER_ERROR
            }
            Self::From(_0) => axum::http::StatusCode::INTERNAL_SERVER_ERROR,
            Self::Transparent(_0) => axum::http::StatusCode::INTERNAL_SERVER_ERROR,
            Self::DeriveMore(_0) => axum::http::StatusCode::INTERNAL_SERVER_ERROR,
        }
    }
    fn sub_label(&self) -> Option<&'static str> {
        match self {
            Self::Implicit { source: _source, context: _context } => Some("Implicit"),
            Self::Explicit { my_error: _my_error, context: _context } => Some("Explicit"),
            Self::From(_0) => Some("From"),
            Self::Transparent(_0) => Some("Transparent"),
            Self::DeriveMore(_0) => Some("DeriveMore"),
        }
    }
    fn context(self) -> std::collections::HashMap<String, serde_json::Value> {
        match self {
            Self::Implicit { source: _source, context: _context } => {
                std::collections::HashMap::from([
                    (
                        "context".to_owned(),
                        serde_json::to_value(_context)
                            .expect("failed to serialize context entry context"),
                    ),
                ])
            }
            Self::Explicit { my_error: _my_error, context: _context } => {
                std::collections::HashMap::from([
                    (
                        "context".to_owned(),
                        serde_json::to_value(_context)
                            .expect("failed to serialize context entry context"),
                    ),
                ])
            }
            Self::From(_0) => std::collections::HashMap::from([]),
            Self::Transparent(_0) => std::collections::HashMap::from([]),
            Self::DeriveMore(_0) => {
                std::collections::HashMap::from([
                    (
                        "0".to_owned(),
                        serde_json::to_value(_0)
                            .expect("failed to serialize context entry 0"),
                    ),
                ])
            }
        }
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        let responses = Vec::from([
            crate::views::error::OpenApiResponse {
                label: Some("Implicit"),
                message_template: Some("implicit source"),
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "context",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
            crate::views::error::OpenApiResponse {
                label: Some("Explicit"),
                message_template: Some("explicit source"),
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "context",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
            crate::views::error::OpenApiResponse {
                label: Some("From"),
                message_template: Some("inline #[from], inferred as source"),
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([]),
            },
            crate::views::error::OpenApiResponse {
                label: Some("Transparent"),
                message_template: None,
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([]),
            },
            crate::views::error::OpenApiResponse {
                label: Some("DeriveMore"),
                message_template: Some(
                    "derive_more conversion without #[source], not a source error",
                ),
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "0",
                        schema: <InnerError as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
        ]);
        responses
    }
}
impl utoipa::IntoResponses for Sources {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for Sources {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
